RESOLVED FIXED165859
Devices with fewer cores should use a more aggressive GC schedule by default
https://bugs.webkit.org/show_bug.cgi?id=165859
Summary Devices with fewer cores should use a more aggressive GC schedule by default
Filip Pizlo
Reported 2016-12-14 12:46:38 PST
Patch forthcoming.
Attachments
the patch (5.79 KB, patch)
2016-12-14 12:48 PST, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2016-12-14 12:48:29 PST
Created attachment 297111 [details] the patch
WebKit Commit Bot
Comment 2 2016-12-14 12:51:09 PST
Attachment 297111 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/heap/Heap.cpp:664: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3 2016-12-14 12:56:07 PST
Comment on attachment 297111 [details] the patch r=me
Filip Pizlo
Comment 4 2016-12-14 12:58:17 PST
Note You need to log in before you can comment on or make changes to this bug.