Devices with fewer cores should use a more aggressive GC schedule by default https://bugs.webkit.org/show_bug.cgi?id=165859

Reviewed by Mark Lam.

* heap/Heap.cpp:
(JSC::Heap::markToFixpoint): Log when we have an unexpected delay in wake-up.
* heap/SlotVisitor.cpp:
(JSC::SlotVisitor::drainInParallelPassively): Don't drain passively if there aren't many cores.
* runtime/Options.cpp:
(JSC::overrideDefaults): Change the heuristics if we have fewer cores.
(JSC::Options::initialize):
* runtime/Options.h:



Canonical link: https://commits.webkit.org/183470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209825 268f45cc-cd09-0410-ab3c-d52691b4dbfc